switch formatter