@@ -19,138 +19,144 @@ import xyz.keksdose.spoon.code_solver.history.Change;
 @ApplicationScoped
 public class ChangelogPrinter {
 
-    private static final ObjectMapper MAPPER =
-            new ObjectMapper(new YAMLFactory().disable(Feature.WRITE_DOC_START_MARKER));
+  private static final ObjectMapper MAPPER =
+      new ObjectMapper(new YAMLFactory().disable(Feature.WRITE_DOC_START_MARKER));
 
-    @Inject
-    MarkdownPrinter markdownPrinter;
+  @Inject MarkdownPrinter markdownPrinter;
 
-    @Inject
-    Config config;
+  @Inject Config config;
 
-    public String printChangeLog(List<? extends Change> changes) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("## Changes: \n");
-        for (var fix : changes) {
-            sb.append("* " + fix.getChangeText().asMarkdown()).append("\n");
-            if (fix.getAnalyzerResult() != null) {
-                sb.append("<!-- ").append(toYaml(fix.getAnalyzerResult())).append(" -->\n");
-                sb.append("<!-- fingerprint:")
-                        .append(fix.getAnalyzerResult().hashCode())
-                        .append(" -->\n");
-            }
-        }
-        return sb.toString();
+  public String printChangeLog(List<? extends Change> changes) {
+    StringBuilder sb = new StringBuilder();
+    sb.append("## Changes: \n");
+    for (var fix : changes) {
+      sb.append("* " + fix.getChangeText().asMarkdown()).append("\n");
+      if (fix.getAnalyzerResult() != null) {
+        sb.append("<!-- ").append(toYaml(fix.getAnalyzerResult())).append(" -->\n");
+        sb.append("<!-- fingerprint:").append(fix.getAnalyzerResult().hashCode()).append(" -->\n");
+      }
     }
+    return sb.toString();
+  }
 
-    private String toYaml(AnalyzerResult analyzerResult) {
-        try {
-            return MAPPER.writeValueAsString(analyzerResult);
-        } catch (Exception e) {
-            return "Could not serialize AnalyzerResult";
-        }
+  private String toYaml(AnalyzerResult analyzerResult) {
+    try {
+      return MAPPER.writeValueAsString(analyzerResult);
+    } catch (Exception e) {
+      return "Could not serialize AnalyzerResult";
     }
+  }
 
-    public String printRepairedIssues(Collection<? extends Change> changes) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("# Repairing Code Style Issues\n");
-        sb.append("<!-- laughing-train-refactor -->\n");
-        changes.stream().map(Change::getBadSmell).distinct().forEach(v -> sb.append(
-                        "## " + v.getName().asText() + "\n")
-                .append(v.getDescription().asMarkdown())
-                .append("\n"));
-        return sb.toString();
+  public String printRepairedIssues(Collection<? extends Change> changes) {
+    StringBuilder sb = new StringBuilder();
+    sb.append("# Repairing Code Style Issues\n");
+    sb.append("<!-- laughing-train-refactor -->\n");
+    changes.stream()
+        .map(Change::getBadSmell)
+        .distinct()
+        .forEach(
+            v ->
+                sb.append("## " + v.getName().asText() + "\n")
+                    .append(v.getDescription().asMarkdown())
+                    .append("\n"));
+    return sb.toString();
+  }
+
+  public String printChangeLogShort(Collection<? extends Change> changes) {
+    StringBuilder sb = new StringBuilder();
+    sb.append("# Repairing Code Style Issues\n");
+    var changesByBadSmell = changes.stream().collect(Collectors.groupingBy(Change::getBadSmell));
+    for (var change : changesByBadSmell.entrySet()) {
+      sb.append(
+          "* %s".formatted(change.getKey().getName().asMarkdown())
+              + " (%s)%n".formatted(change.getValue().size()));
     }
+    return sb.toString();
+  }
 
-    public String printChangeLogShort(Collection<? extends Change> changes) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("# Repairing Code Style Issues\n");
-        var changesByBadSmell = changes.stream().collect(Collectors.groupingBy(Change::getBadSmell));
-        for (var change : changesByBadSmell.entrySet()) {
-            sb.append("* %s".formatted(change.getKey().getName().asMarkdown())
-                    + " (%s)%n".formatted(change.getValue().size()));
-        }
-        return sb.toString();
+  public String printResults(List<AnalyzerResult> results) {
+    Set<RuleId> ruleIds =
+        config.getActiveRules().stream().map(QodanaRules::getRuleId).collect(Collectors.toSet());
+    List<AnalyzerResult> activeRuleResults =
+        results.stream().filter(v -> ruleIds.contains(v.ruleID())).toList();
+    StringBuilder sb = new StringBuilder();
+    sb.append("# Bad smells\n");
+    sb.append(String.format("I found %s bad smells:", activeRuleResults.size())).append("\n");
+    for (AnalyzerResult result : activeRuleResults) {
+
+      sb.append("## ")
+          .append(result.ruleID())
+          .append("\n")
+          .append(result.messageMarkdown())
+          .append("\n")
+          .append("in ")
+          .append(markdownPrinter.toMarkdown(result.filePath()))
+          .append("\n")
+          .append("### Snippet")
+          .append("\n")
+          .append(markdownPrinter.toJavaMarkdownBlock(result.snippet()));
     }
+    return sb.toString();
+  }
 
-    public String printResults(List<AnalyzerResult> results) {
-        Set<RuleId> ruleIds =
-                config.getActiveRules().stream().map(QodanaRules::getRuleId).collect(Collectors.toSet());
-        List<AnalyzerResult> activeRuleResults =
-                results.stream().filter(v -> ruleIds.contains(v.ruleID())).toList();
-        StringBuilder sb = new StringBuilder();
-        sb.append("# Bad smells\n");
-        sb.append(String.format("I found %s bad smells:", activeRuleResults.size()))
-                .append("\n");
-        for (AnalyzerResult result : activeRuleResults) {
-
-            sb.append("## ")
-                    .append(result.ruleID())
-                    .append("\n")
-                    .append(result.messageMarkdown())
-                    .append("\n")
-                    .append("in ")
-                    .append(markdownPrinter.toMarkdown(result.filePath()))
-                    .append("\n")
-                    .append("### Snippet")
-                    .append("\n")
-                    .append(markdownPrinter.toJavaMarkdownBlock(result.snippet()));
-        }
-        return sb.toString();
+  public String printAllResults(List<AnalyzerResult> results) {
+    StringBuilder sb = new StringBuilder();
+    Set<RuleId> ruleIds =
+        config.getActiveRules().stream().map(QodanaRules::getRuleId).collect(Collectors.toSet());
+    long fixableRules = results.stream().filter(v -> ruleIds.contains(v.ruleID())).count();
+    sb.append("# Bad smells\n");
+    sb.append(
+            String.format(
+                "I found %s bad smells with %s repairable:", results.size(), fixableRules))
+        .append("\n");
+    sb.append(generateTable(results, ruleIds));
+    var grouped = results.stream().collect(Collectors.groupingBy(AnalyzerResult::ruleID));
+    for (var groupedResult : grouped.entrySet()) {
+      sb.append("## ").append(groupedResult.getKey()).append("\n");
+      for (AnalyzerResult result : groupedResult.getValue()) {
+        sb.append("### ")
+            .append(result.ruleID())
+            .append("\n")
+            .append(result.messageMarkdown())
+            .append("\n")
+            .append("in ")
+            .append(markdownPrinter.toMarkdown(result.filePath()))
+            .append("\n")
+            .append("#### Snippet")
+            .append("\n")
+            .append(markdownPrinter.toJavaMarkdownBlock(result.snippet()));
+      }
     }
+    return sb.toString();
+  }
 
-    public String printAllResults(List<AnalyzerResult> results) {
-        StringBuilder sb = new StringBuilder();
-        Set<RuleId> ruleIds =
-                config.getActiveRules().stream().map(QodanaRules::getRuleId).collect(Collectors.toSet());
-        long fixableRules =
-                results.stream().filter(v -> ruleIds.contains(v.ruleID())).count();
-        sb.append("# Bad smells\n");
-        sb.append(String.format("I found %s bad smells with %s repairable:", results.size(), fixableRules))
-                .append("\n");
-        sb.append(generateTable(results, ruleIds));
-        var grouped = results.stream().collect(Collectors.groupingBy(AnalyzerResult::ruleID));
-        for (var groupedResult : grouped.entrySet()) {
-            sb.append("## ").append(groupedResult.getKey()).append("\n");
-            for (AnalyzerResult result : groupedResult.getValue()) {
-                sb.append("### ")
-                        .append(result.ruleID())
-                        .append("\n")
-                        .append(result.messageMarkdown())
-                        .append("\n")
-                        .append("in ")
-                        .append(markdownPrinter.toMarkdown(result.filePath()))
-                        .append("\n")
-                        .append("#### Snippet")
-                        .append("\n")
-                        .append(markdownPrinter.toJavaMarkdownBlock(result.snippet()));
-            }
-        }
-        return sb.toString();
+  private String generateTable(List<AnalyzerResult> results, Set<RuleId> ruleIds) {
+    StringBuilder sb = new StringBuilder();
+    sb.append("| ruleID | number | fixable |\n");
+    sb.append("| --- | --- | --- |\n");
+    for (var result :
+        results.stream().collect(Collectors.groupingBy(AnalyzerResult::ruleID)).entrySet()) {
+      sb.append(generateTableLine(ruleIds, result));
     }
+    return sb.toString();
+  }
 
-    private String generateTable(List<AnalyzerResult> results, Set<RuleId> ruleIds) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("| ruleID | number | fixable |\n");
-        sb.append("| --- | --- | --- |\n");
-        for (var result : results.stream()
-                .collect(Collectors.groupingBy(AnalyzerResult::ruleID))
-                .entrySet()) {
-            sb.append(generateTableLine(ruleIds, result));
-        }
-        return sb.toString();
-    }
+  private String generateTableLine(
+      Set<RuleId> ruleIds, Entry<RuleId, ? extends List<AnalyzerResult>> result) {
+    return "| "
+        + result.getKey()
+        + " | "
+        + result.getValue().size()
+        + " | "
+        + result.getValue().stream().anyMatch(v -> ruleIds.contains(v.ruleID()))
+        + " |\n";
+  }
 
-    private String generateTableLine(Set<RuleId> ruleIds, Entry<RuleId, ? extends List<AnalyzerResult>> result) {
-        return "| " + result.getKey() + " | " + result.getValue().size() + " | "
-                + result.getValue().stream().anyMatch(v -> ruleIds.contains(v.ruleID())) + " |\n";
+  public String printBadSmellFingerPrints(List<? extends BadSmell> badSmells) {
+    StringBuilder sb = new StringBuilder();
+    for (BadSmell badSmell : badSmells) {
+      sb.append("<!-- fingerprint:").append(badSmell.getIdentifier()).append(" -->\n");
     }
-
-    public String printBadSmellFingerPrints(List<? extends BadSmell> badSmells) {
-        StringBuilder sb = new StringBuilder();
-        for (BadSmell badSmell : badSmells) {
-            sb.append("<!-- fingerprint:").append(badSmell.getIdentifier()).append(" -->\n");
-        }
-        return sb.toString();
-    }
+    return sb.toString();
+  }
 }
